@@ -6,6 +6,7 @@ PHP                                                                        NEWS
 
 - Disabled SQLite3::loadExtension for threaded SAPIs. (Scott)
 
+- Fixed bug #48227 (NumberFormatter::format leaks memory). (Felipe)
 
 07 May 2009, PHP 5.3.0 RC 2
 - Upgraded bundled sqlite to version 3.6.13. (Ilia)
